--- a/web/form_practice/form_notes.ipynb
+++ b/web/form_practice/form_notes.ipynb
@@ -26,11 +26,17 @@
    "id": "0e2a498b",
    "metadata": {},
    "source": [
-    "<button onclick=\"alert('Are you sure you want to continue?')\"> \n",
-    "    <img src=\"https://yourserver.com/button_img.jpg\" \n",
+    "<button> \n",
+    "    <img src=\"./register.svg\" \n",
     "        alt=\"Submit the form\" height=\"64\" width=\"64\">\n",
     " </button> \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9489278",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -336,6 +342,7 @@
    "execution_count": null,
    "id": "b0b952c6",
    "metadata": {
+    "trusted": false,
     "vscode": {
      "languageId": "html"
     }
@@ -361,6 +368,7 @@
    "execution_count": null,
    "id": "56507dd2",
    "metadata": {
+    "trusted": false,
     "vscode": {
      "languageId": "html"
     }
@@ -405,6 +413,7 @@
    "execution_count": null,
    "id": "02d7951b",
    "metadata": {
+    "trusted": false,
     "vscode": {
      "languageId": "html"
     }
@@ -427,8 +436,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
