Add audio, video, range

--- a/web/form_practice/form_notes.ipynb
+++ b/web/form_practice/form_notes.ipynb
@@ -433,6 +433,40 @@
     "\n",
     "Displays a control for entering a month and year, with no time zone. Keep in mind that this is a newer type that is not supported by all the browsers.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebca713c",
+   "metadata": {},
+   "source": [
+    "### Names\n",
+    "\n",
+    "Attributes like `given-name`, `family-name`, and `additional-name` (middle name) are used for first, last, and middle name fields, respectively. The broader attribute `name` can be used for a combined name field. \n",
+    "\n",
+    "### Email\n",
+    "\n",
+    "`autocomplete=\"email\"` is used for email address fields. \n",
+    "\n",
+    "### Address\n",
+    "\n",
+    "A variety of attributes, such as `street-address`, `address-line1`, `address-line2`, `city`, `state`, `postal-code`, and `country`, are used to specify different parts of an address. \n",
+    "\n",
+    "### Payment Information\n",
+    "\n",
+    "`cc-number` (credit card number), `cc-exp` (expiration date), cc-cvc (security code), and `cc-name` (name on the card) are used for credit card fields. \n",
+    "\n",
+    "### Passwords\n",
+    "\n",
+    "`new-password` for creating new passwords, and `current-password` for login or password change forms, are used for password fields. \n",
+    "\n",
+    "### Phone Numbers\n",
+    "\n",
+    "`tel` is used for phone number fields. \n",
+    "\n",
+    "### Organization\n",
+    "\n",
+    "`organization` is used for company name fields, and `organization-title` for job title fields. "
+   ]
   }
  ],
  "metadata": {
